[gd_scene load_steps=2 format=3 uid="uid://dekdextv3vod5"]

[ext_resource type="Script" uid="uid://dfli6hg6kigoe" path="res://src/ui/screens/campaign/phases/AdvancementPhasePanel.gd" id="1_y4r2p"]

[node name="AdvancementPhasePanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y4r2p")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Advancement Phase"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="CrewLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Crew Members"
horizontal_alignment = 1

[node name="CrewList" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="CharacterInfo" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Select a crew member"
fit_content = true

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="AdvancementLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Available Advancements"
horizontal_alignment = 1

[node name="AdvancementOptions" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ApplyButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
disabled = true
text = "Apply Advancement"
